--- a/include/footer.html
+++ b/include/footer.html
@@ -1,18 +1,13 @@
-<footer>
-    <div class="footer-wrap">
-    </div>
-</footer>
 </body>
 
 <script src="../js/jquery.min.js"></script>
 <script src="../js/swiper-bundle.min.js"></script>
 <script src="../js/aos.js"></script>
-<script src="../js/common.js"></script>
 <script>
     AOS.init({
         duration: 1000,
-        delay: 100,
-    });
+    })
 </script>
+<script src="../js/index.js"></script>
 
 </html>
