--- a/scss/_function.scss
+++ b/scss/_function.scss
@@ -327,7 +327,7 @@
     word-break: keep-all;
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", "Noto Sans KR", "Noto Sans",sans-serif;
 }
 
 article,
