완성본 스타일 수정

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -509,6 +509,21 @@ main {
                     }
                 }
             }
+            &:hover{
+                a{
+                    border-color: #D6211E;
+                    background-color: #FFF0F0;    
+                    .right{
+                        .check{
+                            svg{
+                                circle{
+                                    fill: #D6211E;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
             &.active{
                 a{
                     border-color: #D6211E;
