--- a/scss/_function.scss
+++ b/scss/_function.scss
@@ -1,3 +1,10 @@
+// h1 22 -> 26
+// person_tab(가격) -> 16 -> 20
+// 16 -> 22
+// 14 -> 18
+// 13 -> 16
+
+
 /* ================================ FUNCTION  ================================ */
 @mixin flex-wrap{
     display: flex;
